# tutorial

./: CMakeLists.txt  LICENSE  README.md  main.cpp
patches/: 0001-cmake-call-xpExternPackage.patch  0001-cmake-include-xproinc-call-xpExternPackage.patch  0002-main.cpp-foo-externpro.patch
